successfully implemented DB integration in recommendation-service. Added createRecommendation, deleteRecommendations and updated getRecommendations APIs. Added and updated test cases.